Adds new polybar scripts
- adds new polybar script with cava visualiser

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -1,6 +1,7 @@
 [bar/top]
+monitor = "HDMI-1"
 width = 100%
-height = 32 
+height = 30 
 offset-x = 0
 offset-y = 0 
 ;bottom = true
@@ -17,17 +18,11 @@ padding-right = 0
 module-margin-left = 0 
 module-margin-right = 0
 
-font-0 = Iosevka Term:pixelsize=11;0
-font-1 = FontAwesome:size=10;-2
-font-2 = siji:pixelsize=10;0
+font-0 = Iosevka Nerd Font:pixelsize=12;2
 
-modules-left = bspwm xwindow
-modules-center = 
-modules-right = volume date powermenu
-
-;tray-position = right
-;tray-padding = 2
-;tray-background = #66333333
+modules-left = menu bspwm
+modules-center = xwindow 
+modules-right = cava volume date powermenu
 
 wm-restack = bspwm
 
@@ -98,56 +93,9 @@ content =
 content-foreground = #00000000
 content-background = #55000000
 
-[module/battery]
-type = internal/battery
-
-full-at = 99
-
-battery = BAT0
-adapter = AC0
-
-poll-interval = 5
-
-format-charging = <animation-charging>  <label-charging>
-format-discharging = <ramp-capacity>  <label-discharging>
-format-full = <ramp-capacity>  <label-full>
-label-charging = %percentage%
-label-discharging = %percentage%
-label-full = %percentage%
-format-charging-padding = 3
-format-discharging-padding = 3
-format-full-padding = 3
-
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
-
-[module/backlight]
-type = internal/backlight
-
-card = intel_backlight
-enable-scroll = true
-
-format = <ramp> <label>
-label = %percentage%
-
-ramp-0 = 🌕
-ramp-1 = 🌔
-ramp-2 = 🌓
-ramp-3 = 🌒
-ramp-4 = 🌑
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
 format-volume = <ramp-volume>  <label-volume>
 format-muted = <label-muted>
@@ -175,32 +123,23 @@ format = <label>
 
 label = %output%
 
+[module/menu]
+type = custom/text
+content = 
+content-padding = 2
+click-left = ~/.config/rofi/launchers/type-1/launcher.sh
+
 [module/powermenu]
-type = custom/menu
+type = custom/text
+content =   
+click-left = ~/.config/rofi/powermenu/type-1/powermenu.sh
+content-padding = 3
 
-label-open =   
-;label-open-background = #dd0000
-;label-open-foreground = #fff
-label-close = cancel
-;label-close-background = #dd0000
-;label-close-foreground = #fff
-label-open-padding = 4 
-label-close-padding = 3 
-
-menu-0-0 = reboot
-menu-0-0-exec = menu-open-1
-menu-0-1 = power off
-menu-0-1-exec = menu-open-2
-menu-0-0-padding = 3
-menu-0-1-padding = 3
-
-menu-1-0 = reboot?  
-menu-1-0-exec = sudo reboot
-menu-1-0-padding = 3
-
-menu-2-0 = power off?  
-menu-2-0-exec = sudo poweroff
-menu-2-0-padding = 3
+[module/cava]
+type = custom/script
+exec = ~/.config/polybar/scripts/cava.py -f 30 -b 8 -e fffdfc,fffafe,ffeafa,ffc3d2 -c average
+tail = true
+module-padding = 3
 
 [module/mpd]
 type = internal/mpd
